# Rhombus

./: .gitignore  CMakeLists.txt  agent_brief_encrypted_face_mvm.md  implement_plan.md
scripts/: run-tests.sh
src/: CMakeLists.txt
src/bootstrap/: BootstrapHelper.h  Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt  ModularReducer.cpp  ModularReducer.h  Polynomial.cpp  Polynomial.h  Remez.cpp  RemezCos.h  SealCompat.h  arcsin_d127.txt  gen_arcsin.cpp
src/bootstrap/comp/: SEALfunc.cpp  SEALfunc.h
src/face/: CMakeLists.txt  quant.h
test/: CMakeLists.txt  test_bootstrap.cpp
